decouple MiscTweak from the resource bundle